2006-10-17  Paul Eggert  <eggert@cs.ucla.edu>

	* localcharset.c: Do not check HAVE_SETLOCALE.

2006-10-09  Bruno Haible  <bruno@clisp.org>

	* langprefs.c: Update comment about locale name syntax.
	* localename.c: Likewise.

2006-10-11  Paul Eggert  <eggert@cs.ucla.edu>
            Bruno Haible  <bruno@clisp.org>

	* printf-args.h (arg_type, argument): Test HAVE_LONG_LONG_INT
	instead of HAVE_LONG_LONG.
	* printf-args.c (printf_fetchargs): Likewise.
	* printf-parse.c (PRINTF_PARSE): Likewise.
	* vasnprintf.c (VASNPRINTF): Likewise.

2006-10-08  Bruno Haible  <bruno@clisp.org>

	* printf.c: Include errno.h, limits.h.
	(EOVERFLOW): New fallback definition.
	(libintl_vfprintf): Test whether the output length is > INT_MAX.
	(libintl_vsprintf): Likewise.
	(libintl_vsnprintf): Fix bug when vasnprintf requested more space than
	needed. Fix return value when the entire result string would be larger
	than the provided buffer. Test whether the output length is > INT_MAX.
	(libintl_vasprintf): Test whether the output length is > INT_MAX.
	(libintl_vfwprintf): Likewise.
	(libintl_vswprintf): Fix bug when vasnwprintf requested more space than
	needed. Test whether the output length is > INT_MAX.

2006-09-14  Bruno Haible  <bruno@clisp.org>

	* lock.c: Include <config.h> unconditionally.
	* printf-args.c: Likewise.
	* printf-parse.c: Likewise.
	* relocatable.c: Likewise.
	* vasnprintf.c: Likewise.

2006-08-26  Bruno Haible  <bruno@clisp.org>

	* vasnprintf.c (EOVERFLOW): Remove definition.
	(VASNPRINTF): Return a string of length > INT_MAX without failing.

2006-10-02  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h.in (LIBINTL_VERSION): Bump to 0.15.1.
	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 8:1:0.

2006-09-14  Bruno Haible  <bruno@clisp.org>

	* localcharset.c: Include <config.h> unconditionally.

2006-09-10  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (install_sh): New variable.
	Fixes "make install" errors in packages that have no 'mkinstalldirs'