@@ -1,5 +1,5 @@
 /* Locking in multithreaded situations.
-   Copyright (C) 2005 Free Software Foundation, Inc.
+   Copyright (C) 2005-2006 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify it
    under the terms of the GNU Library General Public License as published
@@ -70,6 +70,10 @@
 
 # include <pthread.h>
 # include <stdlib.h>
+
+# ifdef __cplusplus
+extern "C" {
+# endif
 
 # if PTHREAD_IN_USE_DETECTION_HARD
 
@@ -356,6 +360,10 @@ typedef pthread_once_t gl_once_t;
     while (0)
 extern int glthread_once_singlethreaded (pthread_once_t *once_control);
 
+# ifdef __cplusplus
+}
+# endif
+
 #endif
 
 /* ========================================================================= */
@@ -366,6 +374,10 @@ extern int glthread_once_singlethreaded (pthread_once_t *once_control);
 
 # include <pth.h>
 # include <stdlib.h>
+
+# ifdef __cplusplus
+extern "C" {
+# endif
 
 # if USE_PTH_THREADS_WEAK
 
@@ -469,6 +481,10 @@ typedef pth_once_t gl_once_t;
 extern void glthread_once_call (void *arg);
 extern int glthread_once_singlethreaded (pth_once_t *once_control);
 
+# ifdef __cplusplus
+}
+# endif
+
 #endif
 
 /* ========================================================================= */
@@ -480,6 +496,10 @@ extern int glthread_once_singlethreaded (pth_once_t *once_control);
 # include <thread.h>
 # include <synch.h>
 # include <stdlib.h>
+
+# ifdef __cplusplus
+extern "C" {
+# endif
 
 # if USE_SOLARIS_THREADS_WEAK
 
@@ -601,6 +621,10 @@ typedef struct
 extern void glthread_once (gl_once_t *once_control, void (*initfunction) (void));
 extern int glthread_once_singlethreaded (gl_once_t *once_control);
 
+# ifdef __cplusplus
+}
+# endif
+
 #endif
 
 /* ========================================================================= */
@@ -608,6 +632,10 @@ extern int glthread_once_singlethreaded (gl_once_t *once_control);
 #if USE_WIN32_THREADS
 
 # include <windows.h>
+
+# ifdef __cplusplus
+extern "C" {
+# endif
 
 /* We can use CRITICAL_SECTION directly, rather than the Win32 Event, Mutex,
    Semaphore types, because
@@ -741,6 +769,10 @@ typedef struct
 # define gl_once(NAME, INITFUNCTION) \
     glthread_once (&NAME, INITFUNCTION)
 extern void glthread_once (gl_once_t *once_control, void (*initfunction) (void));
+
+# ifdef __cplusplus
+}
+# endif
 
 #endif
 
